add loader progress